--- a/waw.css
+++ b/waw.css
@@ -1,56 +1,50 @@
-body{
-  background-image: linear-gradient(black,white);
+body {
+  background-image: linear-gradient(black, white);
 }
 
-
-.nav { 
+.nav {
   background: #000;
-  height: 120px; 
+  height: 120px;
   width: 100%;
   border: white solid 2px;
   padding: 0%;
   border-radius: 25px 50px;
-  
 }
 
 .nav ul {
   height: 80px;
   list-style: none;
-  margin: 10px auto; 
+  margin: 10px auto;
   padding: 0;
-  
 }
 
 .nav ul li {
   color: #fff;
-  display: inline-block; 
+  display: inline-block;
   height: 80px;
-  line-height: 80px; 
+  line-height: 80px;
   list-style: none;
   padding: 20px 10px;
-  transition: background .5s; 
-  
+  transition: background 0.5s;
 }
 
-.btn:hover, .nav ul li:hover {
+.btn:hover,
+.nav ul li:hover {
   background: #616063;
-  cursor: pointer; 
-  transition: background .5s;  
+  cursor: pointer;
+  transition: background 0.5s;
 }
 
-
-
-p{
+/* p{
   text-align: left
   color: white;
   font-size: 20px;
-}
+} */
 
-.btn{
+.btn {
   color: white;
   background: #000;
   padding: 10px 40px;
-  text-decoration: none; 
-  transition: background .5s; 
-  
+  text-decoration: none;
+  transition: background 0.5s;
 }
